# au-cg

./: CMakeLists.txt
lab1/: CMakeLists.txt  README.md
lab1/src/: BunnyRenderer.h  CustomTexture.cpp  CustomTexture.h  MandelbrotRenderer.cpp  MandelbrotRenderer.h  MandelbrotTexture.cpp  MandelbrotTexture.h  Pane.cpp  Pane.h  ShaderWrapper.cpp  WindowWrapper.cpp  WindowWrapper.h  main.cpp
lab1/src/shaders/: fragment.glsl  vertex.glsl
lab2/: CMakeLists.txt  README.md
lab2/cmake/: FindSOIL.cmake
lab2/src/cpp/: AbstractCamera.cpp  AbstractCamera.h  AbstractWindowListener.h  BunnyRenderer.cpp  BunnyRenderer.h  Camera.cpp  Camera.h  CameraCentered.cpp  CameraCentered.h  CameraObject.cpp  CubeRenderer.cpp  CubeRenderer.h  LoadedObject.cpp  ObjectBuffersWrapper.cpp  ObjectBuffersWrapper.h  ObjectRenderer.cpp  ObjectRenderer.h  ShaderWrapper.cpp  ShaderWrapper.h  WindowWrapper.cpp  WindowWrapper.h  main.cpp  obj_util.cpp  obj_util.h
lab2/src/shaders/: bunny_fs.glsl  bunny_vs.glsl  cube_fs.glsl  cube_vs.glsl
lab3/: CMakeLists.txt  README.md
lab3/src/cpp/: AbstractCamera.h  AbstractRenderer.h  AbstractShaderRenderer.cpp  AbstractShaderRenderer.h  AbstractWindowListener.h  AxisRenderer.cpp  AxisRenderer.h  CameraObject.cpp  CameraObject.h  GBufferWrapper.cpp  GBufferWrapper.h  ImageRenderer.cpp  ImageRenderer.h  LightingSphere.cpp  LightingSphere.h  LightingSphereRenderer.cpp  LightingSphereRenderer.h  LoadedObject.cpp  LoadedObject.h  ObjectBuffersWrapper.cpp  ObjectBuffersWrapper.h  ObjectRenderer.cpp  ObjectRenderer.h  PhongObjectRenderer.cpp  PhongObjectRenderer.h  PhongRenderer.cpp  PhongRenderer.h  PhongTextureRenderer.cpp  PhongTextureRenderer.h  PointLightInfo.h  Scene.cpp  Scene.h  ShaderWrapper.cpp  ShaderWrapper.h  ShadingObjectRenderer.cpp  ShadingObjectRenderer.h  WindowWrapper.cpp  WindowWrapper.h  gbuffer.cpp  main.cpp
lab3/src/shaders/: axis_fs.glsl  axis_vs.glsl  bunny_fs.glsl  bunny_vs.glsl  geometry_fs.glsl  geometry_vs.glsl  image_fs.glsl  image_vs.glsl  light_fs.glsl  light_vs.glsl  phong_bump_fs.glsl  phong_bump_vs.glsl  phong_fs.glsl  phong_vs.glsl  post_fs.glsl  post_vs.glsl  sphere_fs.glsl
